fix vertical alignment

--- a/Trasparenza/sass/_globals.scss
+++ b/Trasparenza/sass/_globals.scss
@@ -137,6 +137,11 @@ a:hover{
 
 .father-menu > a {
   color: $white;
+  padding-top: 8px;
+}
+
+.father-menu > ul {
+  padding-top: 8px;
 }
 
 .child > a:hover{
@@ -149,16 +154,17 @@ a:hover{
 
 .child {
   padding-top: 8px;
+  padding-bottom: 8px;
   margin-left: -70px;
   padding-left: 90px;
-  line-height: 23px;
+  line-height: 18px;
 }
 
 .father-menu{
   padding-top: 8px;
   margin-left: -70px;
   padding-left: 90px;
-  line-height: 23px;
+  line-height: 18px;
 }
 
 .child:hover{
